--- a/src/index.css
+++ b/src/index.css
@@ -62,10 +62,6 @@ table {
   border-spacing: 0;
 }
 
-a:hover {
-  color: #535bf2;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -76,10 +72,12 @@ h1 {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
   button {
     background-color: #f9f9f9;
   }
+}
+
+#root {
+  max-width: 1440px;
+  margin: 0 auto;
 }
