--- a/src/components/Error/Error.module.css
+++ b/src/components/Error/Error.module.css
@@ -7,11 +7,14 @@
   margin-right: auto;
   width: fit-content;
   border-radius: 8px;
-  background-color: #fafafa;
+  background-color: #2c2b2a;
+  box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.5);
 }
 
 .img {
   max-width: 300px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.5);
 }
 
 .message_wrap {
@@ -20,7 +23,7 @@
 
 .title {
   margin-bottom: 12px;
-
+  color: var(--primary-color);
   font-size: 30px;
   font-weight: 600;
 }
@@ -28,7 +31,7 @@
 .text {
   margin-left: 20px;
   margin-bottom: 8px;
-
+  color: var(--second-color);
   font-size: 18px;
 }
 
@@ -36,4 +39,5 @@
   font-size: 22px;
   font-weight: 500;
   text-decoration: underline;
+  color: var(--background-color);
 }
