--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -7,6 +7,7 @@
   margin-bottom: 20px;
 
   & img {
+    max-width: 380px;
     border-radius: 8px;
     border: 2px solid var(--primary-color);
   }
