--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -12,7 +12,7 @@
   font-family: Geneva, Verdana, sans-serif;
   font-size: 32px;
   font-weight: 600;
-  color: #e6ad77;
+  color: var(--primary-color);
 }
 
 .link {
@@ -20,24 +20,24 @@
   align-items: center;
   gap: 10px;
   padding: 12px 20px;
-  border: 1px solid rgba(255, 136, 0, 0.05);
+  border: 2px solid var(--primary-color);
   border-radius: 5px;
 
   font-size: 24px;
-  color: #e6ad77;
+  color: var(--second-color);
 
-  transition: border-color 250ms linear, filter 250ms linear;
+  transition: all 300ms linear;
 }
 .link:hover,
 .link:focus {
   outline: transparent;
-  filter: drop-shadow(0px 0px 5px #ff7f08);
-  border-color: rgba(255, 136, 0, 0.4);
+  box-shadow: 0 0 10px 4px var(--background-color);
+  border-color: var(--background-color);
 }
 
 .ico {
   width: 40px;
   height: 40px;
 
-  color: #ff7f08;
+  color: var(--background-color);
 }
